# PyChat

./: .dockerignore  .gitignore  Dockerfile  Makefile  PyChat.pro  QuanCha.desktop  README.md  cleanerfile.py  config.py  install.sh  main.py  podman-run.sh  pyproject.toml  requirements.txt  run.sh  shared.py
behind/: __init__.py  config.py  discovery.py  main.py  network.py
chats/: 1234.txt  default.txt
data/: 1234.txt
other/: install.sh  post_install.sh  uninstall.sh
qt/: Main.qml  README.md  chat.qml  discovery.qml  qt.py
sharedkeys/: public_478123.key
